<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="header">My Nanodegree Apps!</string>

    <string name="app1">Spotify Streamer</string>
    <string name="app1_toast">This button will launch my Spotify Streamer App</string>
    <string name="app2">Scores App</string>
    <string name="app2_toast">This button will launch my Football Scores App</string>
    <string name="app3">Library App</string>
    <string name="app3_toast">This button will launch my Library App</string>
    <string name="app4">Build It Bigger</string>
    <string name="app4_toast">This button will launch my Build It Bigger App</string>
    <string name="app5">XYZ Reader</string>
    <string name="app5_toast">This button will launch my XYZ Reader App</string>
    <string name="app6">Capstone</string>
    <string name="app6_toast">This button will launch my Capstone App</string>

    <string name="action_settings">Settings</string>
</resources>
