<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#4299cad3"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/app1"
        android:id="@+id/button1"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:onClick="clickApp1"
        android:clickable="true" />

    <Button
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/app2"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:onClick="clickApp2" />

    <Button
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/app3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="10dp"
        android:background="#fff08c35"
        android:onClick="clickApp3" />

    <Button
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/app4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#fff08c35"
        android:onClick="clickApp4" />

    <Button
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/app5"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="#fff08c35"
        android:onClick="clickApp5" />

    <Button
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/app6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#dced3567"
        android:onClick="clickApp6" />
</RelativeLayout>
